--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "babel-core": "^5.8.24",
     "babel-loader": "^5.3.2",
+    "serve": "^1.4.0",
     "webpack": "^1.12.1"
   }
 }
